--- a/trunk/conf/hud.conf
+++ b/trunk/conf/hud.conf
@@ -1,8 +1,8 @@
-life1;29;30;34;18;res/life_red.png
-life2;29;30;80;18;res/life_red.png
-life3;29;30;125;18;res/life_orange.png
-life4;29;30;167;18;res/life_orange.png
-life5;29;30;213;18;res/life_yellow.png
-life6;29;30;258;18;res/life_yellow.png
-life7;29;30;303;18;res/life_green.png
-life8;29;30;349;18;res/life_green.png
+life1;32;27;42;22;res/red_health.png
+life2;32;27;82;22;res/red_health.png
+life3;32;27;122;22;res/red_health.png
+life4;32;27;162;22;res/red_health.png
+life5;32;27;202;22;res/green_health.png
+life6;32;27;242;22;res/green_health.png
+life7;32;27;282;22;res/green_health.png
+life8;32;27;322;22;res/green_health.png
