Adding mouse control; added  support for collisions test with hitbox and mask;

--- a/conf/menu.conf
+++ b/conf/menu.conf
@@ -1,5 +1,7 @@
-New game;550;200
-Level 1;550;275
-Level 2;550;350
-Level 3;550;425
-High Score;550;500
+New game;550;150
+Level 1;550;225
+Level 2;550;300
+Level 3;550;375
+Level 4;550;430
+High Score;550;480
+Quit;550;525
