--- a/conf/l1.conf
+++ b/conf/l1.conf
@@ -11,4 +11,6 @@ asteroid23;75;82;#size$1;res/asteroid_23.png
 asteroid46;50;55;#size$1;res/asteroid_46.png
 falcon;500;394;#static$1;res/falcon_top.png
 bullet;35;18;#static$1;res/bullet.png
-
+nebulae;1024;1024;#static$1;res/NebuleuseEtoiles.png
+bigStars;1024;1024;#static$1;res/GrandesEtoiles.png
+smallStars;1024;1024;#static$1;res/PetitesEtoiles.png
