add particle effect engine draft

--- a/conf/l1.conf
+++ b/conf/l1.conf
@@ -17,6 +17,7 @@ anim:Cursor;width:192;height:192;animations:#static$8;texture:res/JoueurPointeur
 @enemy;width:96;height:96;animations:#static$16;texture:res/Ennemiu.png
 @shoot;width:64;height:64;animations:#static$8;texture:res/Shootu.png;blending:true
 @bomb;width:96;height:96;animations:#static$12#hit$12;texture:res/bombu.png
+@mitraille;width:96;height:96;animations:#static$12#hit$12;texture:res/Mitrailleur.png
 
 @electron;width:288;height:64;animations:#static$1;texture:res/Electron.png;blending:true
 @muzzl;width:96;height:96;animations:#static$20;texture:res/Muzzlu.png;blending:true
